--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,18 @@
     "dockerfile": "../Dockerfile"
   },
 
+  // "runArgs": [
+  //   "-e", "DISPLAY=host.docker.internal:0",
+  //   "-e", "QT_X11_NO_MITSHM=1",
+  //   "-e", "LIBGL_ALWAYS_INDIRECT=1",
+  //   "-v", "/tmp/.X11-unix:/tmp/.X11-unix",
+  //   "-v", "${localEnv:HOME}/.Xauthority:/root/.Xauthority:rw"
+  // ],
   "runArgs": [
-    "-e", "DISPLAY=host.docker.internal:0",
+    "-e", "DISPLAY=:0",
     "-e", "QT_X11_NO_MITSHM=1",
-    "-e", "LIBGL_ALWAYS_INDIRECT=1",
     "-v", "/tmp/.X11-unix:/tmp/.X11-unix",
-    "-v", "${localEnv:HOME}/.Xauthority:/root/.Xauthority:rw"
+    "-v", "${localEnv:HOME}/.Xauthority:/home/ros/.Xauthority:rw"
   ],
 
   "mounts": [
